<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/b2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/l_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/tv_cname"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pagename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/action_login"
        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_emailid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/storke_1"
            android:hint="@string/hint_email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_password"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/storke_1"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="415dp"
        android:layout_height="120dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_forgetpassword"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/round_rect"
            android:fontFamily="sans-serif"
            android:text="@string/action_login"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/btn_login"
            android:background="@drawable/round_rect"
            android:fontFamily="sans-serif"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_orlogin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tv_orlogin"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_fb"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="140dp"
            android:src="@drawable/fb1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/google_logo" />

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

